--- a/WhatTimeIsIt.csproj
+++ b/WhatTimeIsIt.csproj
@@ -133,6 +133,7 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
+    <Resource Include="Resources\Fonts\Orbitron-Regular.ttf" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -157,6 +158,19 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\ic_thumb_down_black_48dp.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\ic_keyboard_arrow_down_black_48dp.png" />
+    <Resource Include="Resources\ic_keyboard_arrow_down_white_48dp.png" />
+    <Resource Include="Resources\ic_keyboard_arrow_left_black_48dp.png" />
+    <Resource Include="Resources\ic_keyboard_arrow_left_white_48dp.png" />
+    <Resource Include="Resources\ic_keyboard_arrow_right_black_48dp.png" />
+    <Resource Include="Resources\ic_keyboard_arrow_right_white_48dp.png" />
+    <Resource Include="Resources\ic_keyboard_arrow_up_black_48dp.png" />
+    <Resource Include="Resources\ic_keyboard_arrow_up_white_48dp.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Fonts\OFL.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
