--- a/WhatTimeIsIt.csproj
+++ b/WhatTimeIsIt.csproj
@@ -139,35 +139,35 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\ic_schedule_black_48dp.png" />
+    <Resource Include="Resources\Images\ic_schedule_black_48dp.png" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\ic_schedule_black_48dp.ico" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\ic_build_black_48dp.png" />
+    <Resource Include="Resources\Images\ic_build_black_48dp.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\ic_build_white_48dp.png" />
+    <Resource Include="Resources\Images\ic_build_white_48dp.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\ic_delete_forever_black_48dp.png" />
+    <Resource Include="Resources\Images\ic_delete_forever_black_48dp.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\ic_thumb_up_black_48dp.png" />
+    <Resource Include="Resources\Images\ic_thumb_up_black_48dp.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\ic_thumb_down_black_48dp.png" />
+    <Resource Include="Resources\Images\ic_thumb_down_black_48dp.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\ic_keyboard_arrow_down_black_48dp.png" />
-    <Resource Include="Resources\ic_keyboard_arrow_down_white_48dp.png" />
-    <Resource Include="Resources\ic_keyboard_arrow_left_black_48dp.png" />
-    <Resource Include="Resources\ic_keyboard_arrow_left_white_48dp.png" />
-    <Resource Include="Resources\ic_keyboard_arrow_right_black_48dp.png" />
-    <Resource Include="Resources\ic_keyboard_arrow_right_white_48dp.png" />
-    <Resource Include="Resources\ic_keyboard_arrow_up_black_48dp.png" />
-    <Resource Include="Resources\ic_keyboard_arrow_up_white_48dp.png" />
+    <Resource Include="Resources\Images\ic_keyboard_arrow_down_black_48dp.png" />
+    <Resource Include="Resources\Images\ic_keyboard_arrow_down_white_48dp.png" />
+    <Resource Include="Resources\Images\ic_keyboard_arrow_left_black_48dp.png" />
+    <Resource Include="Resources\Images\ic_keyboard_arrow_left_white_48dp.png" />
+    <Resource Include="Resources\Images\ic_keyboard_arrow_right_black_48dp.png" />
+    <Resource Include="Resources\Images\ic_keyboard_arrow_right_white_48dp.png" />
+    <Resource Include="Resources\Images\ic_keyboard_arrow_up_black_48dp.png" />
+    <Resource Include="Resources\Images\ic_keyboard_arrow_up_white_48dp.png" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\Fonts\OFL.txt" />
